--- a/nyanmap/nyanmap.html
+++ b/nyanmap/nyanmap.html
@@ -3,15 +3,31 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
+    <link href="js/jquery/jquery-ui-1.8.18.custom.css" type="text/css" rel="stylesheet"/>
+    <script src="js/jquery/jquery-1.7.1.min.js"></script>
+    <script src="js/jquery/jquery-ui-1.8.18.custom.min.js"></script>
+
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDVlmhMFLkex9hygFh8POvX7JwUAvdyX9s&sensor=true"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=true"></script>
+
 
     <link href="nyanmap.css" type="text/css" rel="stylesheet" />
+    <script src="js/api.js"></script>
     <script src="js/nyanmap.js"></script>
-    <script type="text/javascript"
-       src="http://maps.googleapis.com/maps/api/js?key=AIzaSyABzCNgNQkr610QwYRW83FDhqqaIfhVaxg&sensor=true">
-    </script>
 
+    
   </head>
-  <body onload="initialize(-34.397, 111)">
-    <div id="map_canvas" style="width:100%; height:100%"></div>
+  <body onload="initialize(50,50)">
+   <div id="top_bar">
+     <img id="hacknyancat" src="hacknyancat_logo.png" width="102" height="35"/>
+   </div>
+   <div id="nyancat">
+      <img src="nyancat.gif" alt="nyancat" width="100" height="70" />
+    </div>
+
+    <div id="map_canvas" style="width:100%; height:100%">
+<!--      <div id="nyancat"><img src="nyancat.gif" alt="nyancat" /></div>-->
+    </div>
   </body>
+ 
 </html>
